# Hollysys

./: .gitignore
1. 远程机柜/: AutoThink.uml  Cabinet.uml  远程机柜.xmind  远程机柜工作计划.xlsx  远程机柜架构图.vsd  远程机柜概要设计.docx  远程机柜详细设计.docx
3. SAMA图导出/: SAMA图概要设计.docx  SAMA图需求澄清.docx  SAMA导出.uml  技术交底书-一种基于VISIO的CFC语言转换SAMA图排布方法.doc
3. SAMA图导出/1. 资料/: SAMA图系统设计-周剑.docx  概设流程图.vsd
4. Honeywell/: POU导入.uml  元件映射表.xlsx
4. Honeywell/1. 资料/: Shuanghuan.rar  双环UCNall.xls
5. FF预研/程军工作交接/: CFF数据结构.xmind  FF_源数据.xmind  FF_虚拟主站（导出文档）.doc  FF协议.xmind  FF协议数据整理.doc  FF组态数据.xmind  Fieldbus.cff  LINKMASTER.cff  MIB数据结构.xmind  S_OD_ENTRY.xmind  loc_addr.xmind  下装数据.xmind  下装数据之S_OD_ENTRY.xmind  工作交接说明.docx  源数据.xmind  源数据之MIB数据结构.xmind
5. FF预研/资料/: FF协议AutoThink子系统概要设计说明书.doc  FF协议栈-AT遗留工作-执行记录-王斌.docx  FF协议栈、AT遗留工作梳理- 赵利平细分工作项 0214.docx  FF协议栈、AT遗留工作梳理-0213.docx  FF混合控制方案文档 .doc  主从站下装数据整理.xlsx  主从站下装数据来源梳理-(0331)-郝莉.xlsx  从站数据分析.xlsx  功能块参数信息.xlsx  目前主站填充的VCR数据.txt  目前主站填充的VCR数据.xlsx  第五章-基金会现场总线技术.ppt  算法1主站下装数据文档.xlsx
5. FF预研/过程文档/: FF协议-FF混合控制方案-实现思路.docx  FF协议-功能块参数-分析思路.docx  FF协议-功能块参数-实现思路.docx  FF协议-参数参考通道添加索引值-分析思路.docx  FF协议栈-参数数据取值范围分析.docx  FF协议栈-环境搭建.docx  FF混合控制方案文档 -AT讨论.docx  主从站下装数据.xlsx  主从站下装数据整理.xlsx  主从站下装数据结构.xlsx  功能块参数信息.xlsx
6. M7预研/: M7-AT工作交接文档_caoliyan_20210630.docx  MACS V7 AutoThink软件架构设计说明书.doc
6. M7预研/MakeList/: CMakeLists.txt  CMake操作步骤.docx  Compile.sh  环境+工具+编译.docx  转换工具.7z  问题清单及方案.xlsx
7. 软件设计部/: 2020年软件设计部招聘需求-0422.xlsx  M7项目执行计划-LBL.xlsx  平台组态资源组缺陷率统计(2020.01.01-2020.06.30).xlsx  杭和西分人员预算编制-更新.xlsx  杭和西分公司子系统（或模块）软件设计说明书模板 - 修订（增加CBB引用说明）.doc  资源组长个人PBC-王斌.xlsx  软件设计部2020年全年部门工作记录.xlsx  软件设计部人员信息表20200422.xlsx
7. 软件设计部/CBB建设工作项/: 杭和西分CBB建设管理办法.docx  杭和西分CBB建设管理规范-20200401-带奖励说明的.docx  杭和西分CBB建设管理规范.docx  软件设计部CBB类别划分(1).xlsx  附录1-CBB技术管理委员会名单.docx
7. 软件设计部/人员技术盘点/: 2020年软件设计部人员盘点.xlsx  产品线划分及技术盘点_20200611.xlsx  平台组态资源组_产品线划分及技术盘点.xlsx
7. 软件设计部/新人入组/: 51job_改养军(2807153).doc  上岗考核表 （综合版）.docx  上岗考核表-程军.docx  上岗考核表_改养军.docx  上岗考核表（入职）_马晓伟.docx  关于创建上岗考核表的过程指导 1.docx
7. 软件设计部/新员工转正答辩评价表/: 刘徐-新员工转正答辩评价表.xlsx  刘超-新员工转正答辩评价表（评委打分）.xlsx  (+3 more)
8. 资源组长工作框架/: 资源组长工作框架.xmind  资源组长工作框架_zz.xmind
杂项.Hollysys/: 7-和利时集团任职资格认证答辩ppt模板.pptx  NodeDaemon介绍.docx  【王斌】新员工自我介绍.ppt  任职资格申请系统操作指南.pptx  附件1：-关于职称评定条件相关说明.xlsx  附件2：职称申报级别+姓名.xlsx
(+1656 files in other folders)
